--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -118,6 +118,7 @@ felix.auto.start.60= \
  reference:file:sc-bundles/msghistory.jar \
  reference:file:sc-bundles/callhistory.jar \
  reference:file:sc-bundles/filehistory.jar \
+ reference:file:sc-bundles/metahistory.jar \
  reference:file:sc-bundles/audionotifier.jar \
  reference:file:sc-bundles/keybindings.jar \
  reference:file:sc-bundles/notification.jar
