Re-enables the Yahoo! tests.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5446 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -18,6 +18,7 @@ net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
  MsgHistoryServiceLick \
  CallHistoryServiceLick \
  JabberProtocolProviderSlick \
+ YahooProtocolProviderSlick \
  MsnProtocolProviderSlick \
  GibberishProtocolProviderServiceLick \
  RssProtocolProviderServiceLick \
