--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -106,6 +106,8 @@ felix.auto.start.6= \
  reference:file:sc-bundles/meta-cl.jar \
  reference:file:sc-bundles/msghistory.jar \
  reference:file:sc-bundles/callhistory.jar \
+ reference:file:sc-bundles/filehistory.jar \
+ reference:file:sc-bundles/metahistory.jar \
  reference:file:sc-bundles/notification.jar \
  reference:file:sc-bundles/osdependent.jar
 
@@ -125,6 +127,7 @@ felix.auto.start.7= \
  reference:file:sc-bundles/protocol-icq-slick.jar \
  reference:file:sc-bundles/protocol-rss-slick.jar \
  reference:file:sc-bundles/msghistory-slick.jar \
+ reference:file:sc-bundles/metahistory-slick.jar \
  reference:file:sc-bundles/callhistory-slick.jar \
  reference:file:sc-bundles/popupmessagehandler-slick.jar
 
