--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -9,21 +9,22 @@
 # n.b. a multi-line continuation is marked with {white-space + back-slash + newline}.
 #      Comments cannot be embedded in a multi-line value list!
 #
-net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
- MetaContactListServiceLick \
- NetworkAddressManagerServiceLick \
- FileAccessServiceLick \
- HistoryServiceLick \
- SlicklessTests \
- MsgHistoryServiceLick \
- CallHistoryServiceLick \
- JabberProtocolProviderSlick \
- YahooProtocolProviderSlick \
- MsnProtocolProviderSlick \
- GibberishProtocolProviderServiceLick \
- RssProtocolProviderServiceLick \
- PopupMessageHandlerSLick
+net.java.sip.communicator.slick.runner.TEST_LIST=MetaHistoryServiceSLick
 
+#ConfigurationServiceLick \
+# MetaContactListServiceLick \
+# NetworkAddressManagerServiceLick \
+# FileAccessServiceLick \
+# HistoryServiceLick \
+# SlicklessTests \
+# MsgHistoryServiceLick \
+# CallHistoryServiceLick \
+# JabberProtocolProviderSlick \
+# YahooProtocolProviderSlick \
+# MsnProtocolProviderSlick \
+# GibberishProtocolProviderServiceLick \
+# RssProtocolProviderServiceLick \
+# PopupMessageHandlerSLick
 
 # Note that NetworkAddressManagerServiceLick currently runs
 # successfully because it sets up ZERO tests - the
