Add filetransfer for yahoo and generic filetransfer tests - enabled for jabber and yahoo.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5516 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1210,6 +1210,8 @@ javax.swing.event, javax.swing.border"/>
             manifest="${testsrc}/net/java/sip/communicator/slick/protocol/jabber/jabber.provider.slick.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/slick/protocol/jabber"
                 prefix="net/java/sip/communicator/slick/protocol/jabber"/>
+            <zipfileset dir="${dest}/net/java/sip/communicator/slick/protocol/generic"
+                prefix="net/java/sip/communicator/slick/protocol/generic"/>
         </jar>
     </target>
 
@@ -1279,6 +1281,8 @@ javax.swing.event, javax.swing.border"/>
             <zipfileset dir="${dest}/net/java/sip/communicator/slick/protocol/yahoo"
                 prefix="net/java/sip/communicator/slick/protocol/yahoo"/>
             <zipfileset src="${lib.noinst}/ymsg_network_v0_63.jar" prefix=""/>
+            <zipfileset dir="${dest}/net/java/sip/communicator/slick/protocol/generic"
+                prefix="net/java/sip/communicator/slick/protocol/generic"/>
         </jar>
     </target>
 
