--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -320,6 +320,14 @@ service.protocol.jabber.JABBER_64x64=resources/images/protocol/jabber/logo48x48.
 service.protocol.googletalk.GTALK_16x16=resources/images/protocol/googletalk/status16x16-online.png
 service.protocol.googletalk.GTALK_64x64=resources/images/protocol/googletalk/logo48x48.png
 
+# facebook accregwizz
+service.protocol.facebook.FACEBOOK_16x16=resources/images/protocol/facebook/facebook-online.png
+service.protocol.facebook.FACEBOOK_48x48=resources/images/protocol/facebook/facebook48.png
+service.protocol.facebook.CONNECTING_ICON=resources/images/protocol/facebook/facebook-connecting.gif
+service.protocol.facebook.IDLE_STATUS_ICON=resources/images/protocol/facebook/facebook-idle.png
+service.protocol.facebook.INVISIBLE_STATUS_ICON=resources/images/protocol/facebook/facebook-invisible.png
+service.protocol.facebook.OFFLINE_STATUS_ICON=resources/images/protocol/facebook/facebook-offline.png
+
 # branding plugin images
 plugin.branding.ABOUT_WINDOW_BACKGROUND=resources/images/plugin/branding/aboutWindowBackground.png
 plugin.branding.SPLASH_SCREEN_BACKGROUND=resources/images/plugin/branding/splashScreenBackground.png
