--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -60,7 +60,8 @@ felix.auto.start.10= \
 
 felix.auto.start.20= \
  reference:file:sc-bundles/util.jar \
- reference:file:lib/bundle/log4j.jar
+ reference:file:lib/bundle/log4j.jar \
+ reference:file:lib/bundle/commons-logging.jar
 
 felix.auto.start.30= \
  reference:file:sc-bundles/fileaccess.jar
@@ -83,7 +84,8 @@ felix.auto.start.45= \
 
 felix.auto.start.49= \
  reference:file:sc-bundles/zrtp4j.jar \
- reference:file:sc-bundles/protocol.jar 
+ reference:file:sc-bundles/protocol.jar \
+ reference:file:lib/bundle/httpcore.jar
 
 #the contact list service depends on protocol.jar
 #some protocol implementations however depend on the contact list
@@ -105,7 +107,8 @@ felix.auto.start.52= \
  reference:file:sc-bundles/netaddr.jar \
  reference:file:sc-bundles/protocol-zeroconf.jar \
  reference:file:sc-bundles/protocol-irc.jar \
- reference:file:sc-bundles/protocol-dict.jar
+ reference:file:sc-bundles/protocol-dict.jar \
+ reference:file:sc-bundles/protocol-facebook.jar
 
 felix.auto.start.55= \
  reference:file:sc-bundles/meta-cl.jar
@@ -153,7 +156,8 @@ felix.auto.start.67= \
  reference:file:sc-bundles/autoaway.jar \
  reference:file:sc-bundles/keybindingChooser.jar \
  reference:file:sc-bundles/generalconfig.jar \
- reference:file:sc-bundles/dictaccregwizz.jar
+ reference:file:sc-bundles/dictaccregwizz.jar \
+ reference:file:sc-bundles/facebookaccregwizz.jar
 
 #level 68 is for profiler, don't use it or change the build.xml file accordingly
 
