--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -69,7 +69,8 @@ felix.auto.start.1= \
 
 felix.auto.start.2= \
  reference:file:sc-bundles/util.jar \
- reference:file:lib/bundle/log4j.jar
+ reference:file:lib/bundle/log4j.jar \
+ reference:file:lib/bundle/commons-logging.jar
 
 felix.auto.start.3= \
  reference:file:sc-bundles/fileaccess.jar
@@ -88,7 +89,8 @@ felix.auto.start.4= \
 
 felix.auto.start.5= \
  reference:file:sc-bundles/zrtp4j.jar \
- reference:file:sc-bundles/protocol.jar
+ reference:file:sc-bundles/protocol.jar \
+ reference:file:lib/bundle/httpcore.jar
 
 felix.auto.start.6= \
  reference:file:sc-bundles/contactlist.jar \
