Fixes a NullPointerException in the Accounts configuration form caused by the Facebook protocol because of its lack of a 32x32 protocol icon. In other words, adds a 32x32 icon for the Facebook protocol.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5572 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -322,6 +322,7 @@ service.protocol.googletalk.GTALK_64x64=resources/images/protocol/googletalk/log
 
 # facebook accregwizz
 service.protocol.facebook.FACEBOOK_16x16=resources/images/protocol/facebook/facebook-online.png
+service.protocol.facebook.FACEBOOK_32x32=resources/images/protocol/facebook/facebook32.png
 service.protocol.facebook.FACEBOOK_48x48=resources/images/protocol/facebook/facebook48.png
 service.protocol.facebook.CONNECTING_ICON=resources/images/protocol/facebook/facebook-connecting.gif
 service.protocol.facebook.IDLE_STATUS_ICON=resources/images/protocol/facebook/facebook-idle.png
