Integrate OTR and related modifications to crypto stuff.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5652 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -50,7 +50,14 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; version=1.3.0, \
  javax.crypto; \
  javax.crypto.spec; \
  javax.crypto.interfaces; \
- sun.awt.shell;
+ sun.awt.shell; \
+ java.io; \
+ java.math; \
+ java.nio; \
+ java.security; \
+ java.security.interfaces; \
+ java.security.spec;
+ 
 
 felix.auto.start.10= \
  reference:file:lib/bundle/org.apache.felix.bundlerepository-1.0.0.jar
@@ -83,6 +90,7 @@ felix.auto.start.45= \
  reference:file:sc-bundles/branding.jar
 
 felix.auto.start.49= \
+ reference:file:sc-bundles/bouncycastle.jar \
  reference:file:sc-bundles/zrtp4j.jar \
  reference:file:sc-bundles/protocol.jar \
  reference:file:lib/bundle/httpcore.jar
@@ -157,6 +165,7 @@ felix.auto.start.67= \
  reference:file:sc-bundles/keybindingChooser.jar \
  reference:file:sc-bundles/generalconfig.jar \
  reference:file:sc-bundles/dictaccregwizz.jar \
+ reference:file:sc-bundles/otr.jar \
  reference:file:sc-bundles/facebookaccregwizz.jar
 
 #level 68 is for profiler, don't use it or change the build.xml file accordingly
