--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -407,3 +407,7 @@ plugin.notificationconfig.FOLDER_ICON=resources/images/plugin/notificationconfig
 
 # media configuration form
 plugin.mediaconfig.PLUGIN_ICON=resources/images/impl/media/media.png
+
+# otr plugin icons
+plugin.otr.ENCRYPTED_ICON=resources/images/plugin/otr/encrypted.png
+plugin.otr.DECRYPTED_ICON=resources/images/plugin/otr/decrypted.png
