--- a/build.xml
+++ b/build.xml
@@ -810,7 +810,8 @@
         bundle-plugin-googletalkaccregwizz,bundle-argdelegation-service,
         bundle-argdelegation,bundle-zrtp4j,
         bundle-filehistory,bundle-metahistory,bundle-metahistory-slick,
-        bundle-facebook,bundle-plugin-facebookaccregwizz"/>
+        bundle-facebook,bundle-plugin-facebookaccregwizz,
+		bundle-bouncycastle,bundle-plugin-otr"/>
 
     <!--BUNDLE-SC-LAUNCHER-->
     <target name="bundle-sc-launcher">
@@ -2025,11 +2026,17 @@ org.apache.http.util"/>
 
             <zipfileset src="${lib.noinst}/zrtp4j-light.jar" prefix=""/>
             <manifest>
-                <attribute name="Export-Package" value="gnu.java.zrtp,gnu.java.zrtp.packets,
-                  gnu.java.zrtp.utils,gnu.java.zrtp.zidfile,
-                  org.bouncycastle.crypto,org.bouncycastle.crypto.digests,org.bouncycastle.crypto.macs,
-                  org.bouncycastle.crypto.params,org.bouncycastle.crypto.engines,
-                  org.bouncycastle.crypto.modes"/>
+                <attribute name="Export-Package" value="
+                	gnu.java.zrtp,
+                	gnu.java.zrtp.packets,
+                	gnu.java.zrtp.utils,
+                	gnu.java.zrtp.zidfile"/>
+    	        <attribute name="Import-Package" value="org.bouncycastle.crypto,
+    	        	org.bouncycastle.crypto.digests,
+    	        	org.bouncycastle.crypto.macs,
+    	        	org.bouncycastle.crypto.params,
+    	        	org.bouncycastle.crypto.engines,
+    	        	org.bouncycastle.crypto.modes"/>
                 <attribute name="Bundle-Name" value="ZRTP4J"/>
                 <attribute name="Bundle-Description" value="ZRTP for Java library."/>
                 <attribute name="Bundle-Version" value="1.4.5"/>
@@ -2060,6 +2067,37 @@ org.apache.http.util"/>
                 prefix="net/java/sip/communicator/impl/metahistory" />
         </jar>
     </target>
+	<!--BUNDLE-BOUNCYCASTLE -->
+    <target name="bundle-bouncycastle">
+    	<jar compress="true" destfile="${bundles.dest}/bouncycastle.jar">
+    		<zipfileset src="${lib.noinst}/lcrypto-jdk16-143.jar"/>
+    		<manifest>
+    		    <attribute name="Export-Package" value="org.bouncycastle.crypto,
+    	        	org.bouncycastle.crypto.digests,
+    	        	org.bouncycastle.crypto.macs,
+    	        	org.bouncycastle.crypto.params,
+    	        	org.bouncycastle.crypto.engines,
+    	        	org.bouncycastle.crypto.modes,
+    		    	org.bouncycastle.crypto.generators,
+    		    	org.bouncycastle.crypto.signers,
+    		    	org.bouncycastle.util.encoders,
+    		    	org.bouncycastle.util"/>
+    		    <attribute name="Bundle-Name" value="BouncyCastle"/>
+    		    <attribute name="Bundle-Version" value="1.4.3.1"/>
+    		    <attribute name="System-Bundle" value="yes"/>
+            </manifest>
+    	</jar>
+    </target>
+	<!--BUNDLE-PLUGIN-OTR -->
+	<!--<property name="otr4j_classes" value="../otr4j/bin/classes"/>-->
+    <target name="bundle-plugin-otr">
+        <jar compress="false" destfile="${bundles.dest}/otr.jar" manifest="${src}/net/java/sip/communicator/plugin/otr/otr.manifest.mf">
+            <zipfileset dir="${dest}/net/java/sip/communicator/plugin/otr"
+                prefix="net/java/sip/communicator/plugin/otr"/>
+        	<!--<fileset dir="${otr4j_classes}" excludes="**/*Test.class"/>-->
+        	<zipfileset src="${lib.noinst}/otr4j.jar"/>
+        </jar>
+    </target>
     <!--BUNDLE-METAHISTORY-SLICK-->
     <target name="bundle-metahistory-slick">
         <jar compress="false" destfile="${bundles.dest}/metahistory-slick.jar"
@@ -2068,6 +2106,4 @@ org.apache.http.util"/>
                 prefix="net/java/sip/communicator/slick/metahistory"/>
         </jar>
     </target>
-
-
 </project>
