--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -49,7 +49,13 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; ; version=1.3.0, \
  javax.crypto; \
  javax.crypto.spec; \
  javax.crypto.interfaces; \
- sun.awt.shell;
+ sun.awt.shell; \
+ java.io; \
+ java.math; \
+ java.nio; \
+ java.security; \
+ java.security.interfaces; \
+ java.security.spec;
 
 
 #
@@ -88,6 +94,7 @@ felix.auto.start.4= \
  reference:file:sc-bundles/netaddr.jar
 
 felix.auto.start.5= \
+ reference:file:sc-bundles/bouncycastle.jar \
  reference:file:sc-bundles/zrtp4j.jar \
  reference:file:sc-bundles/protocol.jar \
  reference:file:lib/bundle/httpcore.jar
