--- a/ide/eclipse/.classpath
+++ b/ide/eclipse/.classpath
@@ -61,5 +61,7 @@
     <classpathentry kind="lib" path="lib/os-specific/windows/installer-exclude/jmf.jar"/>
     <classpathentry kind="lib" path="lib/os-specific/windows/installer-exclude/sound.jar"/>
     <classpathentry kind="lib" path="lib/os-specific/windows/jdic_stub.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/lcrypto-jdk16-143.jar"/>        
+    <classpathentry kind="lib" path="lib/installer-exclude/otr4j.jar"/>                    
     <classpathentry kind="output" path="bin"/>
 </classpath>
